infrastructure/controllers/traefik.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: traefik
  labels:
    toolkit.fluxcd.io/tenant: sre-team
