infrastructure/controllers/ingressRoute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard
  namespace: traefik
spec:
  entryPoints:
    - web # Maps to port 80
  routes:
    - match: Host(`dashboard.local`) # Change to the hostname you prefer
      kind: Rule
      services:
        - name: traefik
          port: 8080
