infrastructure/controllers/middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: add-host-header
  namespace: traefik
spec:
  headers:
    customRequestHeaders:
      Host: "harbor.dom.com"
    customResponseHeaders:
      Host: "harbor.dom.com"

---

apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: harbor-header-ingress
  namespace: harbor
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`*`)
      kind: Rule
      services:
        - name: harbor-harbor-portal
          port: 80
      middlewares:
        - name: add-host-header
